--- a/.cvsignore
+++ b/.cvsignore
@@ -1,3 +1,4 @@
 NetworkManager-openconnect-0.7.0.svn14.tar.gz
 NetworkManager-openconnect-0.7.0.97.tar.gz
 NetworkManager-openconnect-0.7.0.99.tar.gz
+NetworkManager-openconnect-0.7.996.git20090828.tar.bz2
