--- a/.cvsignore
+++ b/.cvsignore
@@ -4,3 +4,4 @@ NetworkManager-openconnect-0.7.0.99.tar.gz
 NetworkManager-openconnect-0.7.996.git20090828.tar.bz2
 NetworkManager-openconnect-0.7.996.git20090921.tar.bz2
 NetworkManager-openconnect-0.7.997.tar.bz2
+NetworkManager-openconnect-0.8.git20100411.tar.bz2
