Update to a git snapshot

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ NetworkManager-openconnect-0.7.996.git20090921.tar.bz2
 NetworkManager-openconnect-0.7.997.tar.bz2
 NetworkManager-openconnect-0.8.git20100411.tar.bz2
 NetworkManager-openconnect-0.8.1.tar.bz2
+/NetworkManager-openconnect-0.8.1.git20110326.tar.bz2
