--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ NetworkManager-openconnect-0.7.997.tar.bz2
 NetworkManager-openconnect-0.8.git20100411.tar.bz2
 NetworkManager-openconnect-0.8.1.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110326.tar.bz2
+/NetworkManager-openconnect-0.8.1.git20110418.tar.bz2
