Fix certsigs key and a few other things

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ NetworkManager-openconnect-0.8.git20100411.tar.bz2
 NetworkManager-openconnect-0.8.1.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110326.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110418.tar.bz2
+/NetworkManager-openconnect-0.8.1.git20110419.tar.bz2
