--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ NetworkManager-openconnect-0.8.1.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110326.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110418.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110419.tar.bz2
+/NetworkManager-openconnect-0.9.2.0.tar.xz
