--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ NetworkManager-openconnect-0.8.1.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110418.tar.bz2
 /NetworkManager-openconnect-0.8.1.git20110419.tar.bz2
 /NetworkManager-openconnect-0.9.2.0.tar.xz
+/NetworkManager-openconnect-0.9.3.995.git20120302.tar.bz2
+/NetworkManager-openconnect-0.9.3.997.tar.bz2
