Import 0.8.6.0 package for EL6

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ NetworkManager-openconnect-0.8.1.tar.bz2
 /NetworkManager-openconnect-0.9.3.997.tar.bz2
 /NetworkManager-openconnect-0.9.4.0.tar.xz
 /NetworkManager-openconnect-0.9.4.0.git20120612.tar.xz
+/NetworkManager-openconnect-0.8.6.0.tar.bz2
